Update Header and Layout components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
+import MainSection from "../components/MainSection.astro";
 import Layout from "../layouts/Layout.astro";
-import Header from "../components/Header.astro";
 ---
 
-<Layout title="Welcome to my Portfolio." />
+<Layout title="Manuel Perez">
+  <MainSection />
+</Layout>
 
 <style></style>
