--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,8 @@
----
-const { title, description } = Astro.props;
----
-
-<header>
-  <h1>{title}</h1>
-  <p>{description}</p>
+<header class="py-4 opacity-90">
+  <nav class="flex justify-center items-center gap-5">
+    <a href="/" class="text-2xl font-bold"> Home</a>
+    <a href="/sobremi" class="text-2xl font-bold"> Sobre Mi</a>
+    <a href="/proyectos" class="text-2xl font-bold"> Proyectos</a>
+    <a href="/contacto" class="text-2xl font-bold"> Contacto</a>
+  </nav>
 </header>
-
-<!-- <style>
-
-</style> -->
