Update package.json and Header.astro, add devDependencies and social media buttons

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,8 @@
 <header class="py-4 opacity-90">
-  <nav class="flex justify-center items-center gap-5">
-    <a href="/" class="text-2xl font-bold"> Home</a>
-    <a href="/sobremi" class="text-2xl font-bold"> Sobre Mi</a>
-    <a href="/proyectos" class="text-2xl font-bold"> Proyectos</a>
-    <a href="/contacto" class="text-2xl font-bold"> Contacto</a>
+  <nav class="flex justify-center items-center gap-5 text-xl font-bold">
+    <a href="#top" class=""> Home</a>
+    <a href="#sobre-mi"> Sobre Mí</a>
+    <a href="#proyectos"> Proyectos</a>
+    <a href="#contacto"> Contacto</a>
   </nav>
 </header>
