--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,15 @@
 ---
 import MainSection from "../components/MainSection.astro";
+import Proyects from "../components/Proyects.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Manuel Perez">
+<Layout
+  title="Manuel Perez - Desarrollador Web Full Stack"
+  description="Portafolio de Manuel Perez, desarrollador web buscando nuevas oportunidades laborales"
+>
   <MainSection />
+  <Proyects />
 </Layout>
 
 <style></style>
