--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -1,16 +1,19 @@
 ---
 import Badge from "./Badge.astro";
+import DownloadFile from "../../src/icons/DownloadFile.astro";
+import Linkedin from "../../src/icons/Linkedin.astro";
+import Github from "../../src/icons/Github.astro";
 ---
 
 <section class="w-full mx-auto lg:w-[700px] py-32">
-  <h1 class="text-white text-xl font-bold">Hola, Soy Manuel Perez</h1>
+  <h1 class="text-white text-3xl font-bold">Hola, Soy Manuel Perez</h1>
   <div class="flex gap-2 items-start mt-2">
     <h2 class="mb-4">Full Stack Developer</h2>
     <a href="https://www.linkedin.com/in/manuelperezf/">
       <Badge text="Open for Work" />
     </a>
   </div>
-  <p>
+  <p class="text-pretty">
     Apasionado por la tecnología y Desarrollador Full Stack con una sólida
     formación en Resolución de problemas. Cuento con experiencia en soporte TI y
     Redes. Posteriormente me especialicé en desarrollo web, adquiriendo
@@ -19,4 +22,36 @@ import Badge from "./Badge.astro";
     por aceptar nuevos desafíos en la industria tecnológica en constante
     evolución
   </p>
+  <div class="flex justify-between gap-3 mt-4">
+    <div class="flex gap-2">
+      <a href="https://www.linkedin.com/in/manuelperezf/">
+        <button
+          type="button"
+          class="flex gap-1 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg px-2 py-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"
+        >
+          <Linkedin />
+          LinkedIn
+        </button>
+      </a>
+      <a href="https://github.com/manu4970">
+        <button
+          type="button"
+          class="flex gap-1 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg px-2 py-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"
+        >
+          <Github />
+          GitHub
+        </button>
+      </a>
+    </div>
+    <div>
+      <a href="/">
+        <button
+          class="bg-gradient-to-l from-[#FF0028] to-[#1E1C23] px-4 py-2 rounded-md flex gap-2"
+        >
+          Descargar CV
+          <DownloadFile />
+        </button>
+      </a>
+    </div>
+  </div>
 </section>
