Update project component text

--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -16,12 +16,11 @@ import CardPh from "../img/CardPh.astro";
           <h5
             class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
           >
-            Noteworthy technology acquisitions 2021
+            Noteworthy technology
           </h5>
         </a>
         <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-          Here are the biggest enterprise technology acquisitions of 2021 so
-          far, in reverse chronological order.
+          Here are the biggest enterprise
         </p>
         <a
           href="#"
@@ -56,12 +55,11 @@ import CardPh from "../img/CardPh.astro";
           <h5
             class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
           >
-            Noteworthy technology acquisitions 2021
+            Noteworthy technology
           </h5>
         </a>
         <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-          Here are the biggest enterprise technology acquisitions of 2021 so
-          far, in reverse chronological order.
+          Here are the biggest enterprise
         </p>
         <a
           href="#"
@@ -96,12 +94,11 @@ import CardPh from "../img/CardPh.astro";
           <h5
             class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
           >
-            Noteworthy technology acquisitions 2021
+            Noteworthy technology
           </h5>
         </a>
         <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-          Here are the biggest enterprise technology acquisitions of 2021 so
-          far, in reverse chronological order.
+          Here are the biggest enterprise
         </p>
         <a
           href="#"
@@ -136,12 +133,11 @@ import CardPh from "../img/CardPh.astro";
           <h5
             class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
           >
-            Noteworthy technology acquisitions 2021
+            Noteworthy technology
           </h5>
         </a>
         <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-          Here are the biggest enterprise technology acquisitions of 2021 so
-          far, in reverse chronological order.
+          Here are the biggest enterprise technology
         </p>
         <a
           href="#"
