Add links to skills and footer components

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,7 @@
     <a href="#top" class=""> Home</a>
     <a href="#sobre-mi"> Sobre Mí</a>
     <a href="#proyectos"> Proyectos</a>
+    <a href="#habilidades"> Habilidades</a>
     <a href="#contacto"> Contacto</a>
   </nav>
 </header>
