--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import MainSection from "../components/MainSection.astro";
 import Proyects from "../components/Proyects.astro";
+import Skills from "../components/Skills.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -10,6 +11,7 @@ import Layout from "../layouts/Layout.astro";
 >
   <MainSection />
   <Proyects />
+  <Skills />
 </Layout>
 
 <style></style>
