Update styles and links in Footer, MainSection, Proyects, Skills, and icons

--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -27,7 +27,7 @@ import Github from "../../src/icons/Github.astro";
       <a href="https://www.linkedin.com/in/manuelperezf/">
         <button
           type="button"
-          class="flex gap-1 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg px-2 py-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"
+          class="flex gap-1 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg px-2 py-2 dark:bg-[#1E1C23] dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"
         >
           <Linkedin />
           LinkedIn
@@ -36,7 +36,7 @@ import Github from "../../src/icons/Github.astro";
       <a href="https://github.com/manu4970">
         <button
           type="button"
-          class="flex gap-1 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg px-2 py-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"
+          class="flex gap-1 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg px-2 py-2 dark:bg-[#1E1C23] dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"
         >
           <Github />
           GitHub
