--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -88,7 +88,7 @@ const SKILLSOTHER = [
 ];
 ---
 
-<section class="w-full mx-auto lg:w-[700px] mb-24">
+<section id="habilidades" class="w-full mx-auto lg:w-[700px] mb-24">
   <h3 class="test-bold text-3xl mb-8 mt-5">Habilidades</h3>
   <h4 class="flex justify-center text-xl mb-4">Frontend</h4>
   <div class="flex flex-wrap justify-center mt-8 gap-4 mb-6">
