--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,11 +1,13 @@
-<footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
+<footer
+  class="w-full mx-auto lg:w-[700px] bg-white rounded-lg shadow m-4 dark:bg-[#1E1C23]"
+>
   <div
     class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
   >
     <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
-      >© 2023 <a href="https://flowbite.com/" class="hover:underline"
-        >Flowbite™</a
-      >. All Rights Reserved.
+      >2024 - <a href="https://flowbite.com/" class="hover:underline"
+        >Proyecto creado por Manuel Perez</a
+      >
     </span>
     <ul
       class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0"
