--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -1,5 +1,6 @@
 ---
 import CardPh from "../img/CardPh.astro";
+import Code from "../icons/Code.astro";
 
 const PROJECTS = [
   {
@@ -22,12 +23,14 @@ const PROJECTS = [
 ];
 ---
 
-<section class="w-full mx-auto lg:w-[700px] mb-24">
-  <h3 class="test-bold text-3xl mb-3">Proyectos</h3>
+<section id="proyectos" class="w-full mx-auto lg:w-[700px] mb-24">
+  <h3 class="flex items-center gap-2 test-bold text-3xl mb-3">
+    <a><Code /></a>Proyectos
+  </h3>
   <div class="grid grid-cols-2 gap-5">
     {
       PROJECTS.map((proyect) => (
-        <article class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <article class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-[#1E1C23] dark:border-gray-700">
           <a href={proyect.url}>
             <CardPh />
           </a>
@@ -42,7 +45,7 @@ const PROJECTS = [
             </p>
             <a
               href="#"
-              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-[#FF0028] dark:hover:bg-[#ff8b9c] dark:focus:ring-blue-800"
             >
               {proyect.github}
               <svg
