Update header, main section, projects, and skills components

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -67,7 +67,7 @@ const SKILLSOTHER = [
   },
   {
     name: "GitHub",
-    logo: "https://img.icons8.com/fluency-systems-filled/48/github.png",
+    logo: "https://img.icons8.com/ios-glyphs/30/FFFFFF/github.png",
     alt: "GitHub",
   },
   {
@@ -88,8 +88,16 @@ const SKILLSOTHER = [
 ];
 ---
 
-<section id="habilidades" class="w-full mx-auto lg:w-[700px] mb-24">
-  <h3 class="test-bold text-3xl mb-8 mt-5">Habilidades</h3>
+<section id="habilidades" class="w-full mx-auto lg:w-[700px] mb-10 pt-20">
+  <h3 class="flex gap-2 test-bold text-3xl mb-8 mt-5">
+    <img
+      width="26"
+      height="26"
+      src="https://img.icons8.com/ios/50/FFFFFF/book--v1.png"
+      alt="book--v1"
+    />
+    Habilidades
+  </h3>
   <h4 class="flex justify-center text-xl mb-4">Frontend</h4>
   <div class="flex flex-wrap justify-center mt-8 gap-4 mb-6">
     {
