--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -23,8 +23,8 @@ const PROJECTS = [
 ];
 ---
 
-<section id="proyectos" class="w-full mx-auto lg:w-[700px] mb-24">
-  <h3 class="flex items-center gap-2 test-bold text-3xl mb-3">
+<section id="proyectos" class="section w-full mx-auto lg:w-[700px] mb-10 pt-20">
+  <h3 class="flex items-center gap-2 test-bold text-3xl mb-6">
     <a><Code /></a>Proyectos
   </h3>
   <div class="grid grid-cols-2 gap-5">
