Update links and content in MainSection and Layout components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Contact from "../components/Contact.astro";
 import MainSection from "../components/MainSection.astro";
 import Proyects from "../components/Proyects.astro";
 import Skills from "../components/Skills.astro";
@@ -12,6 +13,7 @@ import Layout from "../layouts/Layout.astro";
   <MainSection />
   <Proyects />
   <Skills />
+  <Contact />
 </Layout>
 
 <style></style>
