--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -9,22 +9,19 @@ import Github from "../../src/icons/Github.astro";
   <h3 class="text-white text-3xl font-bold">Hola, Soy Manuel Perez</h3>
   <div class="flex gap-2 items-start mt-2">
     <h2 class="mb-4">Full Stack Developer</h2>
-    <a href="https://www.linkedin.com/in/manuelperezf/">
+    <a href="https://www.linkedin.com/in/manuelperezf/" target="_blank">
       <Badge text="Open for Work" />
     </a>
   </div>
   <p class="text-pretty">
-    Apasionado por la tecnología y Desarrollador Full Stack con una sólida
-    formación en Resolución de problemas. Cuento con experiencia en soporte TI y
-    Redes. Posteriormente me especialicé en desarrollo web, adquiriendo
-    habilidades destacadas tanto en el frontend como en el backend. Con una
-    dedicación constante para encontrar soluciones creativas, estoy entusiasmado
-    por aceptar nuevos desafíos en la industria tecnológica en constante
-    evolución
+    Soy un desarrollador web full stack
+    <span class="text-[#ff4864]">con experiencia en soporte TI y Redes,</span>
+    donde aprendi a trabajar en equipo y a resolver problemas de manera rapida y
+    eficiente. Me encanta aprender nuevas tecnologias y mejorar mis habilidades.
   </p>
   <div class="flex justify-between gap-3 mt-4">
     <div class="flex gap-2">
-      <a href="https://www.linkedin.com/in/manuelperezf/">
+      <a href="https://www.linkedin.com/in/manuelperezf/" target="_blank">
         <button
           type="button"
           class="flex gap-1 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg px-2 py-2 dark:bg-[#1E1C23] dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"
@@ -33,7 +30,7 @@ import Github from "../../src/icons/Github.astro";
           LinkedIn
         </button>
       </a>
-      <a href="https://github.com/manu4970">
+      <a href="https://github.com/manu4970" target="_blank">
         <button
           type="button"
           class="flex gap-1 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg px-2 py-2 dark:bg-[#1E1C23] dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"
