Add dependencies and files, update contact and header sections

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,3 +1,11 @@
+---
+
+---
+
 <section id="contacto" class="w-full mx-auto lg:w-[700px] py-48">
   <h3 class="flex items-center gap-2 test-bold text-3xl mb-6">Contacto</h3>
+  <div class="flex gap-2">
+    <p id="email">manuelperez497078@gmail.com</p>
+    <button id="copy-text-btn">Copy</button>
+  </div>
 </section>
