--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,6 @@
 <header class="py-4 opacity-90 backdrop-blur-2xl fixed w-full top-0 start-0">
   <nav class="flex justify-center items-center gap-5 text-xl font-bold">
-    <a href="#top" class=""> Home</a>
-    <a href="#sobre-mi"> Sobre Mí</a>
+    <a href="#top" class="">Inicio</a>
     <a href="#proyectos" class="section"> Proyectos</a>
     <a href="#habilidades"> Habilidades</a>
     <a href="#contacto"> Contacto</a>
