Fix Download CV button. and implement responsive design

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer
-  class="w-full mx-auto lg:w-[700px] bg-white rounded-lg shadow m-4 dark:bg-[#1E1C23]"
+  class="mx-auto lg:w-[700px] bg-white rounded-lg shadow m-4 dark:bg-[#1E1C23]"
 >
   <div
     class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
