--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,10 @@
-<header class="py-4 opacity-90 backdrop-blur-2xl fixed w-full top-0 start-0">
-  <nav class="flex justify-center items-center gap-5 text-xl font-bold">
+<header
+  class="text-white py-4 opacity-90 backdrop-blur-2xl fixed w-full top-0 start-0"
+>
+  <nav
+    id="navbar"
+    class="flex justify-center items-center font-bold gap-5 text-md md:text-xl"
+  >
     <a href="#top" class="">Inicio</a>
     <a href="#proyectos" class="section"> Proyectos</a>
     <a href="#habilidades"> Habilidades</a>
