--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -33,6 +33,11 @@ const SKILLSFRONT = [
 ];
 const SKILLSBACK = [
   {
+    name: "Node.js",
+    logo: "https://img.icons8.com/color/48/000000/nodejs.png",
+    alt: "Python",
+  },
+  {
     name: "Python",
     logo: "https://img.icons8.com/color/48/000000/python.png",
     alt: "Python",
@@ -89,7 +94,9 @@ const SKILLSOTHER = [
 ---
 
 <section id="habilidades" class="w-full mx-auto lg:w-[700px] mb-10 pt-20">
-  <h3 class="flex gap-2 test-bold text-3xl mb-8 mt-5">
+  <h3
+    class="flex justify-center lg:*:justify-start gap-2 test-bold text-3xl mb-8 mt-5"
+  >
     <img
       width="26"
       height="26"
