Update PDF download link in MainSection.astro

--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -65,7 +65,8 @@ import Github from "../../src/icons/Github.astro";
     .getElementById("downloadButton")
     .addEventListener("click", function () {
       // Replace 'path/to/your/file.pdf' with the actual path to your PDF file
-      var pdfFilePath = "src/assets/Manuel-Perez-FlowCV-Resume-20240102.pdf";
+      var pdfFilePath =
+        "https://manuelperezf.com/download/Manuel-Perez-FlowCV-Resume-20240102.pdf";
 
       // Create a new anchor element
       var link = document.createElement("a");
