Delete favicon.svg and update project details in Proyects.astro

--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -12,12 +12,12 @@ const PROJECTS = [
     tags: ["React", "TailwindCSS", "Astro"],
   },
   {
-    title: "Noteworthy technology",
+    title: "Chiqui URL",
     description:
-      "Here are the biggest enterprise technology acquisitions of 2021 so far",
-    image: "https://source.unsplash.com/random/800x600",
-    url: "#",
-    github: "#",
+      "Esta aplicacion fue creada para acortar enlaces de manera sencilla y rapida",
+    image: "src/img/ChiquiURL.webp",
+    url: "https://chiquiurl-api.onrender.com/",
+    github: "https://github.com/manu4970/ChiquiURL",
     tags: ["React", "TailwindCSS", "Astro"],
   },
 ];
@@ -31,11 +31,15 @@ const PROJECTS = [
     {
       PROJECTS.map((proyect) => (
         <article class=" bg-white border border-gray-200 rounded-lg shadow dark:bg-[#1E1C23] dark:border-gray-700">
-          <a href={proyect.url}>
-            <CardPh />
+          <a href={proyect.url} target="_blank">
+            <img
+              class="object-cover w-full h-48 rounded-t-lg"
+              src={proyect.image}
+              alt={proyect.title}
+            />
           </a>
           <div class="p-5">
-            <a href="#">
+            <a href="#" target="_blank">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                 {proyect.title}
               </h5>
@@ -43,27 +47,6 @@ const PROJECTS = [
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
               {proyect.description}
             </p>
-            <a
-              href="#"
-              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-[#FF0028] dark:hover:bg-[#ff8b9c] dark:focus:ring-blue-800"
-            >
-              {proyect.github}
-              <svg
-                class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-                aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 14 10"
-              >
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M1 5h12m0 0L9 1m4 4L9 9"
-                />
-              </svg>
-            </a>
           </div>
         </article>
       ))
