Update project URLs and tags

--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -8,17 +8,17 @@ const PROJECTS = [
     description: "Web app para encontrar lugares donde practicar deporte",
     image: "https://source.unsplash.com/random/800x600",
     url: "#",
-    github: "#",
+    github: "https://github.com/manu4970/Sport-Spot",
     tags: ["React", "TailwindCSS", "Astro"],
   },
   {
     title: "Chiqui URL",
     description:
       "Esta aplicacion fue creada para acortar enlaces de manera sencilla y rapida",
-    image: "src/img/ChiquiURL.webp",
+    image: "/ChiquiURL.webp",
     url: "https://chiquiurl-api.onrender.com/",
     github: "https://github.com/manu4970/ChiquiURL",
-    tags: ["React", "TailwindCSS", "Astro"],
+    tags: ["JS", "Node.Js", "Express", "postgreSQL"],
   },
 ];
 ---
@@ -39,7 +39,7 @@ const PROJECTS = [
             />
           </a>
           <div class="p-5">
-            <a href="#" target="_blank">
+            <a href={proyect.url} target="_blank">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                 {proyect.title}
               </h5>
@@ -53,121 +53,3 @@ const PROJECTS = [
     }
   </div>
 </section>
-
-<!-- <div
-class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
->
-<a href="#">
-  <CardPh />
-</a>
-<div class="p-5">
-  <a href="#">
-    <h5
-      class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
-    >
-      Noteworthy technology
-    </h5>
-  </a>
-  <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-    Here are the biggest enterprise
-  </p>
-  <a
-    href="#"
-    class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-  >
-    Read more
-    <svg
-      class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-      aria-hidden="true"
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 14 10"
-    >
-      <path
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        d="M1 5h12m0 0L9 1m4 4L9 9"></path>
-    </svg>
-  </a>
-</div>
-</div>
-<div
-class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
->
-<a href="#">
-  <CardPh />
-</a>
-<div class="p-5">
-  <a href="#">
-    <h5
-      class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
-    >
-      Noteworthy technology
-    </h5>
-  </a>
-  <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-    Here are the biggest enterprise
-  </p>
-  <a
-    href="#"
-    class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-  >
-    Read more
-    <svg
-      class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-      aria-hidden="true"
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 14 10"
-    >
-      <path
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        d="M1 5h12m0 0L9 1m4 4L9 9"></path>
-    </svg>
-  </a>
-</div>
-</div>
-<div
-class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
->
-<a href="#">
-  <CardPh />
-</a>
-<div class="p-5">
-  <a href="#">
-    <h5
-      class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
-    >
-      Noteworthy technology
-    </h5>
-  </a>
-  <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-    Here are the biggest enterprise technology
-  </p>
-  <a
-    href="#"
-    class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-  >
-    Read more
-    <svg
-      class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-      aria-hidden="true"
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 14 10"
-    >
-      <path
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        d="M1 5h12m0 0L9 1m4 4L9 9"></path>
-    </svg>
-  </a>
-</div>
-</div> -->
