Update styles and remove unused code

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,7 +2,7 @@
 import Phone from "../icons/Phone1.astro";
 ---
 
-<section id="contacto" class="w-full mx-auto lg:w-[700px] pt-10">
+<section id="contacto" class="text-white w-full mx-auto lg:w-[700px] pt-10">
   <h3 class="flex justify-center items-center gap-2 test-bold text-3xl mb-6">
     <Phone /> Contacto
   </h3>
