--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -5,7 +5,7 @@ import Linkedin from "../../src/icons/Linkedin.astro";
 import Github from "../../src/icons/Github.astro";
 ---
 
-<section class="w-full mx-auto py-48 text-center px-8 lg:w-[700px]">
+<section class="text-white w-full mx-auto py-48 text-center px-8 lg:w-[700px]">
   <h3 class="text-white text-3xl font-bold">
     Hola, Soy <span
       class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-[#FF0028] to-[#757070]"
