--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -93,7 +93,10 @@ const SKILLSOTHER = [
 ];
 ---
 
-<section id="habilidades" class="w-full mx-auto lg:w-[700px] mb-10 pt-20">
+<section
+  id="habilidades"
+  class="text-white w-full mx-auto lg:w-[700px] mb-10 pt-20"
+>
   <h3
     class="flex justify-center lg:*:justify-start gap-2 test-bold text-3xl mb-8 mt-5"
   >
