--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,28 +1,17 @@
-<footer
-  class="mx-auto lg:w-[700px] bg-white rounded-lg shadow m-4 dark:bg-[#1E1C23]"
->
+<footer class="mx-auto lg:w-[700px] rounded-lg shadow m-4 bg-[#1E1C23]">
   <div
     class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
   >
-    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
-      >2024 - <a href="https://flowbite.com/" class="hover:underline"
+    <span class="text-sm sm:text-center text-gray-400"
+      >2024 - <a href="https://github.com/manu4970" class="hover:underline"
         >Proyecto creado por Manuel Perez</a
       >
     </span>
     <ul
-      class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0"
+      class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-400 sm:mt-0"
     >
       <li>
         <a href="#" class="hover:underline me-4 md:me-6">About</a>
-      </li>
-      <li>
-        <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
-      </li>
-      <li>
-        <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
-      </li>
-      <li>
-        <a href="#" class="hover:underline">Contact</a>
       </li>
     </ul>
   </div>
