--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -1,5 +1,4 @@
 ---
-import CardPh from "../img/CardPh.astro";
 import Code from "../icons/Code.astro";
 
 const PROJECTS = [
@@ -24,13 +23,15 @@ const PROJECTS = [
 ---
 
 <section id="proyectos" class="section w-full mx-auto lg:w-[700px] mb-10 pt-20">
-  <h3 class="flex justify-center items-center gap-2 test-bold text-3xl mb-6">
+  <h3
+    class="text-white flex justify-center items-center gap-2 test-bold text-3xl mb-6"
+  >
     <a><Code /></a>Proyectos
   </h3>
   <div class="grid md:grid-cols-2 md:w-full px-4 gap-4">
     {
       PROJECTS.map((proyect) => (
-        <article class=" bg-white border border-gray-200 rounded-lg shadow dark:bg-[#1E1C23] dark:border-gray-700">
+        <article class=" border rounded-lg shadow bg-[#1E1C23] border-gray-700">
           <a href={proyect.url} target="_blank">
             <img
               class="object-cover w-full h-48 rounded-t-lg"
@@ -40,13 +41,11 @@ const PROJECTS = [
           </a>
           <div class="p-5">
             <a href={proyect.url} target="_blank">
-              <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+              <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">
                 {proyect.title}
               </h5>
             </a>
-            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-              {proyect.description}
-            </p>
+            <p class="mb-3 font-normal text-white">{proyect.description}</p>
           </div>
         </article>
       ))
